--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <a href="https://www.youtube.com/watch?v=lrvCwa9MmFU" class="btn">1.Sürpriz</a>
         <a href="https://open.spotify.com/track/3PfnJmBZOtS9rMrVUzTwu6?si=PoMJcxyeS4KcI19-FND-Ng" class="btn fade">2.Gerçek sürpriz</a>
         <!-- Hidden Button -->
-        <button id="revealButton" class="btn" onclick="revealPicture()">Click to Reveal</button>
+        <button id="revealButton" class="btn" onclick="revealPicture()">Tamam son sürpriz</button>
         <!-- Hidden Picture -->
         <div id="birthdayImage" class="animation hidden">
             <img src="https://imgur.com/nOJ21bS.png" style="width: 150px; height: 150px;">
