--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             color: #ff758c;
             border-radius: 5px;
             font-weight: bold;
+            margin: 10px 0;
             transition: background 0.3s, color 0.3s;
         }
         .btn:hover {
